# LAG

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/blockchain/: block.rs  chain.rs  mod.rs  proof_of_work.rs
src/network/: message.rs  mod.rs  node.rs
src/utils/: crypto.rs  mod.rs
src/wallet/: keypair.rs  mod.rs  transaction.rs
tests/: integration_test.rs  transaction_test.rs
